mule-contributors-guide/v/3.4/index.adoc
=  Mule撰稿人指南

我们一直对改进，修复和想法感兴趣，这将有助于更快地解决问题或代码。如果你有兴趣贡献并使骡子变得更好，那就把它带上吧！我们的源代码存在于github上，我们欢迎提出修复和创新请求。按照本“贡献者指南”中的步骤准备并提交您的贡献。

<<A. Checking Forums and JIRA>> +
<<B. Getting the Source Code>> +
<<C. Setting Up a Development Environment>> +
<<E. Developing Mule Source Code>> +
<<F. Submitting a Pull Request>> +
<<See Also>>

== 甲。检查论坛和JIRA

在开始之前，请花几分钟时间查看我们的错误跟踪系统和我们的论坛，以确保其他人尚未接受您的挑战。

. 查看 link:http://www.mulesoft.org/jira/browse/MULE[现有的JIRA]以查看是否已经记录了一个错误。
. 仔细阅读 link:http://forums.mulesoft.com[MuleSoft的论坛]，看看是否有其他人开始解决问题或开始改进。
. 扫描 link:http://stackoverflow.com/questions/tagged/mule[堆栈溢出]以查看是否已有针对您的问题的建议解决方案。 +
. 如果在上述资源中没有其他人启动您的改进或修复，请通过创建 link:http://www.mulesoft.org/jira/browse/MULE[Mule JIRA]来记录此问题。 JIRA发布一个号码来确定你的问题;保持这个数字方便，因为您可以在此过程的稍后使用它来创建分支。

== 乙。获取源代码

骡源代码居住在Github上。完成以下过程以找到代码并将其放到本地驱动器上。

[TIP]
====
如果您是Git的新手，请考虑阅读*{{0}}*以吸取基本知识。
*Just want a Read-Only version of Mule source code?*

. 按照以下步骤2-6，跳过步骤4。
. 从命令行执行以下命令，直接从Mule的github存储库中克隆只读版本的Mule源代码：`$ git clone git://github.com/mulesoft/mule.git`
====

.  *{{0}}*或*log in*到您的github帐户**. **
. 如果您尚未这样做，请在本地驱动器上 link:https://help.github.com/articles/set-up-git[设置git]。
. 转到Mule的github页面： link:https://github.com/mulesoft/mule.git[https://github.com/mulesoft/mule.git]
. 点击页面右上角的*Fork*按钮，然后选择您自己的git仓库，github将插入仓库的副本。
. 准备通过安全的文件传输连接将您的github帐户中分叉的Mule ESB存储库克隆到本地驱动器。根据git的建议，我们建议使用HTTPS将源代码文件传输到本地驱动器。但是，如果您希望建立通过SSH传输文件的安全连接，请遵循git的过程 link:https://help.github.com/articles/generating-ssh-keys[生成SSH密钥]。
. 在命令行中，创建或导航到本地驱动器上的一个现有文件夹，您希望存储您的Mule源代码分支克隆。
. 从命令行执行以下操作之一：+
.. 对于*HTTPS*：`git clone https://github.com/<yourreponame>/mule`
.. 对于*SSH*：`git clone` git@github.com：<username> / <repo-name>。git
. 添加上游存储库，以便您可以更改并随更改mule-3.x（即主分支）而更新。从命令行执行以下任一操作：+
.. 对于*HTTPS*：`git remote add upstream https://github.com/mulesoft/mule.git`
.. 对于*SSH*：`git remote add upstream git@github.com:mulesoft/mule.git`

== ℃。建立开发环境

在开始之前，你需要设定一个开发Mule的环境。您的开发环境需要三件事：Java SDK，最近版本的Maven，集成开发环境（IDE）以及新的代码分支。

==  JDK

. 如果您正在处理*Windows*或*Linux*，请在本地驱动器上安装以下 link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[Java开发工具包]之一。如果您正在使用*Mac*，只需确认随OSX附带的JDK与以下列出的JDK之一（`java -version`）相匹配，然后跳至下面的第4步。 +
*  Java SE开发工具包标准版1.6.0_26（也称为Java SE 6 Update 26）
*  Java SE开发工具包7（也称为Java SE 7u13）
. 创建名为`JAVA_HOME`的环境变量，将其设置为您安装JDK的目录。
. 更新`PATH`环境变量，以便它包含JDK二进制文件的路径。将以下行添加到`PATH`变量：+
* 视窗：`%JAVA_HOME%/bin`
* 的Linux：`$JAVA_HOME/bin`

=== 的Maven

. 从 link:http://maven.apache.org/download.cgi[Maven网站]下载Maven发行版，然后将其解包到本地驱动器上方便的文件夹中。
. 创建名为`M2_HOME`的环境变量，然后将其设置为解包Maven的文件夹。
. 更新`PATH`环境变量以包含Maven二进制文件的路径。 +
*  Windows：将以下行添加到PATH变量中：`%M2_HOME%/bin`
*  Mac或Linux：将以下行添加到PATH变量中：`$M2_HOME/bin`

===  IDE

. 选择一个集成开发环境（IDE）用于构建您的修复或改进。您可以考虑使用Studio，Mule的图形化IDE， link:http://www.eclipse.org/downloads/[蚀]或 link:http://www.jetbrains.com/idea/download/[的IntelliJ]。在本指南后面的部分，我们将更多地讨论使用Maven和IDE的主题。

=== 主题分支，依赖和工件

直接在主版本的Mule源代码上工作可能会导致与原版主合并冲突。相反，作为贡献源代码的最佳实践，请在主题分支中处理您的项目。 （以下命令适用于基于UNIX的操作系统;适合Windows的调整。）

. 从您的本地驱动器创建一个新分支，您可以在其中使用以下命令处理错误修复或改进：+
`git branch dev/yourreponame/bug/yourJIRAissuenumber`
. 使用以下命令切换到新分支：+
`git checkout dev/yourreponame/bug/yourJIRAissuenumber`
. 在克隆Mule源代码的目录中，指示Maven使用以下命令下载所有依赖库：+
`mvn -DskipTests install` +
请注意，如果这是您第一次使用Maven，则需要花几分钟才能完成下载。
. 如果您使用的是Mac或Linux，请跳至下一步。在Windows中，Maven将库存储在主目录中的.m2存储库中。例如，`C:\Documents and Settings\<username>\.m2\repository`。由于Java RMI测试在目录名称包含空格的情况下失败，因此您必须将Maven本地资源库移动到名称为_does not_include空格的目录，例如`%M2_HOME%/conf `或`%USERPROFILE%/.m2`
. 如果您使用的是*Mac OS*，请检查`$JAVA_HOME/jre/lib/security`目录的内容以确认存在以下两个文件：

*  `local_policy.jar`
*  `US_export_policy.jar` +

+
这两个文件可以防止有关密码学的任何问题。如果不存在，请下载 link:http://www.oracle.com/technetwork/java/javase/downloads/jce-6-download-429243.html[Java密码学扩展（JCE）无限强度管辖权策略文件6.0]，然后将这些文件复制到上面标识的`security`目录中。

== 如开发骡子源代码

现在你已经拥有了一个本地开发环境和你自己的Mule源代码分支，你已经准备好了！以下步骤简要概述了开发和提交变更以准备提交的开发生命周期。

. 查看 link:/mule-contributors-guide/v/3.4/working-with-an-ide[使用IDE]和 link:/mule-contributors-guide/v/3.4/working-with-maven[与Maven合作]，详细了解如何在新设置的开发环境中工作。
. 查看 link:/mule-contributors-guide/v/3.4/mule-coding-conventions[骡编码公约]文档以确保您遵守源代码标准，从而增加将您的更改与mule-3.x（即主控）源代码合并的可能性。
. 将Mule源代码项目导入到您的IDE中，然后处理您的更改，修复或改进。
. 调试和测试您的本地版本，解决出现的任何问题。
. 在本地保存您的更改。
. 通过使用以下命令首先将更改压缩到分支上的单个提交，准备对合并请求所做的更改：+
`git rebase i mule3.x`
. 将压缩的提交推送到您的github存储库中的分支。有关如何提交更改的详细信息，请参阅 http://git-scm.com/book/en/Git-Basics-Recording-Changes-to-the-Repository[Git的文档]。
. 定期更新您的分支，并应用于mule-3.x分支的任何更改或修正。请参阅下面的<<Updating Your Branch>>。

=== 更新您的分支

为了确保您的克隆版本的Mule源代码保持与mule-3.x（即master）分支的任何更新保持同步，请定期更新您的分支以取代最新版本的主分支。

. 使用以下命令从"upstream"主mule-3.x分支中提取最新更改：+
`git fetch upstreamgit fetch upstream --tags`
. 使用以下命令确保您正在使用主分支：+
`git checkout mule-3.x`
. 使用以下命令将最新的更改和更新从主分支合并到主题分支：+
`git merge upstream/mule-3.x`
. 使用以下命令将主服务器的任何更改推送到分叉克隆：+
`git push origin mule-3.x` +
`git push origin --tags`
. 使用以下命令再次访问您的主题分支（继续编码）：+
`git checkout dev/yourreponame/bug/yourJIRAissuenumber`
. 使用以下命令从最新版本的主分支重新使用分支：+
`git rebase mule-3.x`
. 解决您的主题分支上可能因mule-3.x（即master）更改而出现的任何冲突。
. 使用以下命令将新重建的分支推回到您的git仓库中：+
`git push origin dev/yourreponame/bug/yourJIRAissuenumber -f` +
 +

==  F。提交合并请求

准备好提交您的补丁以供审查和合并？在github中启动一个pull请求！

. 查看 link:http://www.mulesoft.org/legal/contributor-agreement.html[MuleSoft贡献者协议]。
. 从分支的回购点击*Pull Request*按钮。
. 在*Pull Request Preview*对话框中，输入变更的标题和可选说明，查看构成拉取请求一部分的提交，然后点击*Send Pull Request*。 （请参阅 link:https://help.github.com/articles/using-pull-requests[github的详细说明]提交拉取请求。）
.  Mule的核心开发团队会审核拉取请求，并可能会针对*Pull Request Discussion*中的更改发起讨论或提出问题。然后团队可以将您的提交与适当的主合并。 +
. 如果您在提交提交请求后对提交_after_进行了更改或更正，请返回合并请求页面并更新*Commit Range*（通过*Commits*标签），而不是提交新的拉取请求。

== 另请参阅

* 您可能希望通过创建自定义组件来扩展Mule，而不是调整源代码。有关更多详细信息，请参阅 link:/mule-user-guide/v/3.4/extending[扩展]。
* 除了创建自定义组件外，您还可以使用我们的 link:/anypoint-connector-devkit/v/3.4[Anypoint连接器DevKit]进一步扩展Mule。
